# systemd-swap

./: .gitignore  90-systemd-swap.conf  CHANGELOG.md  Cargo.toml  Makefile  PKGBUILD  README.md  for_test_swapfu.fio  install.sh  package.sh  pyproject.toml  swap-default.conf  swap.conf  systemd-swap  systemd-swap.conf  systemd-swap.service  systemd-swap.sh  systemd-swap.spec  vramswap.sh
.github/workflows/: black.yml  ci.yml
contrib/: package.sh  systemd-swap.spec
include/: systemd-swap.service
man/: swap.conf.5  systemd-swap.1  systemd-swap.8
src/: main.rs  systemd-swap.py
